// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobList: Component should render correctly 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.jobList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Past Versions"
        id="dataSource.jobList.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.jobList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Past Versions"
        id="dataSource.jobList.title"
        values={Object {}}
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={true}
    noDataContent={null}
  >
    <RadioGroup
      customCheckedStyles={Object {}}
      customLabelStyles={Object {}}
      customStyles={
        Object {
          "flexDirection": "column",
        }
      }
      name="job_option_revert"
      onChange={[Function]}
    >
      <styled.div />
    </RadioGroup>
  </LoadingWrapper>
  <NavigationContainer
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      id="cancelBtn"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="dataSource.jobList.cancel"
        values={Object {}}
      />
    </BackButton>
    <NextButton
      disabled={true}
      id="revertBtn"
      loading={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Revert"
        id="dataSource.jobList.revert"
        values={Object {}}
      />
    </NextButton>
  </NavigationContainer>
</styled.div>
`;

exports[`JobList: Component should render correctly with list of jobs 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.jobList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Past Versions"
        id="dataSource.jobList.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.jobList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Past Versions"
        id="dataSource.jobList.title"
        values={Object {}}
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <RadioGroup
      customCheckedStyles={Object {}}
      customLabelStyles={Object {}}
      customStyles={
        Object {
          "flexDirection": "column",
        }
      }
      name="job_option_revert"
      onChange={[Function]}
    >
      <styled.div>
        <styled.div
          key="0"
        >
          <styled.div>
            <Component
              id="job_option_revert-0"
              value={1}
            />
            <styled.label
              htmlFor="job_option_revert-0"
            >
              <Span>
                Invalid Date
              </Span>
              <styled.div />
              <Span>
                <FormattedMessage
                  defaultMessage="Success"
                  id="dataSource.jobList.success"
                  values={Object {}}
                />
              </Span>
            </styled.label>
          </styled.div>
          <Styled(Component)
            onClick={[Function]}
          />
        </styled.div>
        <styled.div
          key="1"
        >
          <styled.div>
            <Component
              id="job_option_revert-1"
              value={2}
            />
            <styled.label
              htmlFor="job_option_revert-1"
            >
              <Span>
                Invalid Date
              </Span>
              <styled.div />
              <Span>
                <FormattedMessage
                  defaultMessage="Success"
                  id="dataSource.jobList.success"
                  values={Object {}}
                />
              </Span>
            </styled.label>
          </styled.div>
          <Styled(Component)
            onClick={[Function]}
          />
        </styled.div>
      </styled.div>
    </RadioGroup>
  </LoadingWrapper>
  <NavigationContainer
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      id="cancelBtn"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="dataSource.jobList.cancel"
        values={Object {}}
      />
    </BackButton>
    <NextButton
      disabled={true}
      id="revertBtn"
      loading={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Revert"
        id="dataSource.jobList.revert"
        values={Object {}}
      />
    </NextButton>
  </NavigationContainer>
</styled.div>
`;

exports[`JobList: Component should render correctly with no data 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.jobList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Past Versions"
        id="dataSource.jobList.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Source"
        id="dataSource.jobList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Past Versions"
        id="dataSource.jobList.title"
        values={Object {}}
      />
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={true}
    noDataContent={null}
  >
    <RadioGroup
      customCheckedStyles={Object {}}
      customLabelStyles={Object {}}
      customStyles={
        Object {
          "flexDirection": "column",
        }
      }
      name="job_option_revert"
      onChange={[Function]}
    >
      <styled.div />
    </RadioGroup>
  </LoadingWrapper>
  <NavigationContainer
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      id="cancelBtn"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="dataSource.jobList.cancel"
        values={Object {}}
      />
    </BackButton>
    <NextButton
      disabled={true}
      id="revertBtn"
      loading={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Revert"
        id="dataSource.jobList.revert"
        values={Object {}}
      />
    </NextButton>
  </NavigationContainer>
</styled.div>
`;
